:construction: hook功能已完成，但是无法读取配置文件?